fix versions