@@ -13,7 +13,6 @@ import shticell.engine.sheet.impl.Edge;
 import java.util.ArrayList;
 import java.util.List;
 
-
 public class EffectiveValueImp implements EffectiveValue {
     private CellType cellType;
     private Object value;
@@ -48,23 +47,30 @@ public class EffectiveValueImp implements EffectiveValue {
         return copy;
     }
 
-    //TODO!
     @Override
     public <T> T extractValueWithExpectation(Class<T> type) {
-        if (cellType.isAssignableFrom(type)) {
+        if (type.isInstance(value)) {
             return type.cast(value);
         }
-        // error handling... exception ? return null ?
+        // Handle error if needed
         return null;
     }
 
     @Override
     public void calculateValue(Sheet sheet, String originalValue) {
         if (originalValue.isEmpty()) {
-            this.value = null;
+            this.value = " ";
+            this.cellType = CellType.STRING;
         } else if (originalValue.startsWith("{")) {
-            stringToExpression(sheet, originalValue);
-            this.cellType = CellType.EXPRESSION;
+            try {
+                Expression expr = stringToExpression(sheet, originalValue);
+                this.cellType = CellType.EXPRESSION;
+                this.expressionName = expr.getOperationName();
+                this.value = expr.evaluate();
+            } catch (Exception e) {
+                this.value = "!UNDEFINED!";
+                this.cellType = CellType.STRING;
+            }
         } else {
             numOrString(originalValue);
         }
@@ -100,9 +106,7 @@ public class EffectiveValueImp implements EffectiveValue {
         }
         result.add(currentElement.toString().trim());
 
-        String operator = result.removeFirst();
-
-        // Convert to array
+        String operator = result.remove(0);  // Use remove(0) instead of removeFirst()
         String[] operatorAndArgs = new String[result.size() + 1];
         operatorAndArgs[0] = operator;
         for (int i = 0; i < result.size(); i++) {
@@ -115,57 +119,83 @@ public class EffectiveValueImp implements EffectiveValue {
     private Expression createExpression(Sheet sheet, String[] expression) throws IllegalArgumentException {
         String operator = expression[0];
         List<Expression> args = new ArrayList<>();
-
         for (int i = 1; i < expression.length; i++) {
             args.add(stringToExpression(sheet, expression[i]));
         }
-        Expression res = getExpression(sheet, operator, args);
 
+        Expression res = null;
+        try {
+            res = getExpression(sheet, operator, args);
+            this.expressionName = res.getOperationName();
+            this.value = res.evaluate();
 
-        this.expressionName = res.getOperationName();
-        this.value = res.evaluate();
-
-        if (res instanceof Ref) {
-            Coordinate ref = ((Ref) res).getRefCoordinate();
-            sheet.getCell(coordinate).addCellToRelatedCells(ref);
-            sheet.getCell(ref).addCellToAffectedCells(coordinate);
-            Edge edge = new Edge(ref, coordinate);
-            if (!sheet.getEdges().contains(edge)) {
-                sheet.addEdge(edge);
+            if (res instanceof Ref refExpr) {
+                Coordinate ref = refExpr.getRefCoordinate();
+                sheet.getCell(coordinate).addCellToRelatedCells(ref);
+                sheet.getCell(ref).addCellToAffectedCells(coordinate);
+                Edge edge = new Edge(ref, coordinate);
+                if (!sheet.getEdges().contains(edge)) {
+                    sheet.addEdge(edge);
+                }
             }
+
+        } catch (Exception e) {
+            if (cellType == CellType.STRING) {
+                this.value = "!UNDEFINED!";
+            } else if (cellType == CellType.NUMERIC) {
+                this.value = Double.NaN;
+            }
+        }
+
+        if (res == null) {
+            throw new IllegalStateException("Expression could not be created or evaluated.");
         }
 
         return res;
     }
 
-    private static Expression getExpression(Sheet sheet, String operator, List<Expression> args) {
-        validateArguments(operator, args);
+    private Expression getExpression(Sheet sheet, String operator, List<Expression> args) {
+       this.cellType = validateArguments(operator, args);
         return createExpression(sheet, operator, args);
     }
 
-    private static void validateArguments(String operator, List<Expression> args) {
+    private CellType validateArguments(String operator, List<Expression> args) {
         switch (operator) {
-            case "PLUS", "MINUS", "TIMES", "DIVIDE", "MOD", "POW", "CONCAT" -> {
+            case "PLUS", "MINUS", "TIMES", "DIVIDE", "MOD", "POW" -> {
                 if (args.size() != 2) {
                     throw new IllegalArgumentException(operator + " requires exactly 2 arguments, but got " + args.size());
                 }
+                return CellType.NUMERIC;
+            }
+            case  "CONCAT" -> {
+                if (args.size() != 2) {
+                    throw new IllegalArgumentException(operator + " requires exactly 2 arguments, but got " + args.size());
+                }
+                return CellType.STRING;
             }
             case "ABS" -> {
                 if (args.size() != 1) {
                     throw new IllegalArgumentException(operator + " requires exactly 1 argument, but got " + args.size());
                 }
+                return CellType.NUMERIC;
             }
-            case "SUB", "REF" -> {
-                int expectedArgs = operator.equals("SUB") ? 3 : 1;
-                if (args.size() != expectedArgs) {
-                    throw new IllegalArgumentException(operator + " requires exactly " + expectedArgs + " arguments, but got " + args.size());
+            case "SUB" -> {
+                if (args.size() != 3) {
+                    throw new IllegalArgumentException(operator + " requires exactly 3 arguments, but got " + args.size());
                 }
+                return CellType.STRING;
+            }
+            case "REF" -> {
+                if (args.size() != 1) {
+                    throw new IllegalArgumentException(operator + " requires exactly 1 argument, but got " + args.size());
+                }
+                return CellType.EXPRESSION;
             }
             default -> throw new IllegalArgumentException("Unknown operator: " + operator);
         }
     }
 
-    private static Expression createExpression(Sheet sheet, String operator, List<Expression> args) {
+    private Expression createExpression(Sheet sheet, String operator, List<Expression> args) {
         return switch (operator) {
             case "PLUS" -> new Plus(args.get(0), args.get(1));
             case "MINUS" -> new Minus(args.get(0), args.get(1));
@@ -180,10 +210,10 @@ public class EffectiveValueImp implements EffectiveValue {
             default -> throw new IllegalArgumentException("Unknown operator: " + operator);
         };
     }
-    private Expression stringToExpression(Sheet sheet, String input) {
 
+    private Expression stringToExpression(Sheet sheet, String input) {
         if (input.startsWith("{") && input.endsWith("}")) {
-            return createExpression( sheet,stringTrimer(input));
+            return createExpression(sheet, stringTrimer(input));
         } else {
             try {
                 return new NumberExpression(Double.parseDouble(input));
